--- a/HelloJSON/Base.lproj/Main.storyboard
+++ b/HelloJSON/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HelloJSON" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="23g-t6-UMh">
+                                <rect key="frame" x="167" y="28" width="185" height="190"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgw-T1-RPr">
+                                <rect key="frame" x="25" y="28" width="134" height="58"/>
+                                <animations/>
+                                <state key="normal" title="user1"/>
+                                <connections>
+                                    <action selector="userInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w9g-dh-7Ro"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sq-Zv-puk">
+                                <rect key="frame" x="25" y="94" width="134" height="58"/>
+                                <animations/>
+                                <state key="normal" title="user2"/>
+                                <connections>
+                                    <action selector="userInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YaE-8H-XG3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9b-lz-5G5">
+                                <rect key="frame" x="25" y="160" width="134" height="58"/>
+                                <animations/>
+                                <state key="normal" title="user3"/>
+                                <connections>
+                                    <action selector="userInfo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hRP-8C-pLj"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8sq-Zv-puk" firstAttribute="top" secondItem="vgw-T1-RPr" secondAttribute="bottom" constant="8" id="0hz-1z-9vr"/>
+                            <constraint firstItem="8sq-Zv-puk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="3o6-nk-6nY"/>
+                            <constraint firstItem="23g-t6-UMh" firstAttribute="leading" secondItem="8sq-Zv-puk" secondAttribute="trailing" constant="8" id="6JA-Nf-GBh"/>
+                            <constraint firstItem="p9b-lz-5G5" firstAttribute="width" secondItem="vgw-T1-RPr" secondAttribute="width" id="8de-aZ-cEs"/>
+                            <constraint firstItem="23g-t6-UMh" firstAttribute="leading" secondItem="p9b-lz-5G5" secondAttribute="trailing" constant="8" id="L24-lD-f7G"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="23g-t6-UMh" secondAttribute="trailing" constant="8" id="L5K-gl-115"/>
+                            <constraint firstItem="vgw-T1-RPr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Lcb-fY-wPg"/>
+                            <constraint firstItem="23g-t6-UMh" firstAttribute="leading" secondItem="vgw-T1-RPr" secondAttribute="trailing" constant="8" id="Lhw-0B-OYl"/>
+                            <constraint firstItem="p9b-lz-5G5" firstAttribute="top" secondItem="8sq-Zv-puk" secondAttribute="bottom" constant="8" id="iKZ-Lp-8Ql"/>
+                            <constraint firstItem="23g-t6-UMh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="nRj-xM-STi"/>
+                            <constraint firstItem="vgw-T1-RPr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="pov-8H-kRX"/>
+                            <constraint firstItem="p9b-lz-5G5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="rrR-DN-h8j"/>
+                            <constraint firstItem="8sq-Zv-puk" firstAttribute="width" secondItem="vgw-T1-RPr" secondAttribute="width" id="xBG-9q-tj4"/>
+                            <constraint firstItem="23g-t6-UMh" firstAttribute="width" secondItem="vgw-T1-RPr" secondAttribute="width" id="yj5-By-jTI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="display" destination="23g-t6-UMh" id="nF1-VA-6hS"/>
+                        <outletCollection property="userInfo" destination="vgw-T1-RPr" collectionClass="NSMutableArray" id="oLE-9K-Aca"/>
+                        <outletCollection property="userInfo" destination="8sq-Zv-puk" collectionClass="NSMutableArray" id="46l-7e-uOa"/>
+                        <outletCollection property="userInfo" destination="p9b-lz-5G5" collectionClass="NSMutableArray" id="idu-fR-0on"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="206" y="219"/>
         </scene>
     </scenes>
 </document>
